# ml-gpu-java-service

./: .gitignore  README.md
java-app/: pom.xml
java-server/: pom.xml
java-server/resources/: application.properties
java-server/resources/static/: index.html  matrix.html
java-server/resources/static/css/: Styles.css
java-server/resources/static/js/: App.js
java-server/src/main/java/com/mlhybrid/: Application.java
java-server/src/main/java/com/mlhybrid/config/: WebSocketConfig.java
java-server/src/main/java/com/mlhybrid/controller/: MLController.java  MatrixController.java  SimpleController.java
java-server/src/main/java/com/mlhybrid/grpc/: GrpcClientService.java
java-server/src/main/java/com/mlhybrid/model/: ComputeRequest.java  ComputeResponse.java  Matrix.java  MatrixComputeRequest.java  MatrixComputeResponse.java
java-server/src/main/java/com/mlhybrid/websocket/: WebSocketHandler.java
proto/: ml.proto
rust-server/: Cargo.toml  build.rs
rust-server/src/: client.rs  gpu_compute.rs  lib.rs  main.rs  matrix_ops.rs
